<resources>
    <string name="app_name">LocalExpenseTracker</string>
    <string name="name">Name</string>
    <string name="new_name">New Name</string>
    <string name="total_balance">Total Balance</string>
    <string name="rupiah">Rp</string>
    <string name="user_profile">User Profile</string>
    <string name="notification">Notification</string>
    <string name="categories">Categories</string>
    <string name="account_name">Account Name</string>
    <string name="account_balance">Account Balance</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="input">Input</string>
    <string name="amount">Amount</string>
    <string name="transaction_name">Transaction Name</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="image">Image</string>
    <string name="month">Month</string>
    <string name="incex">(+)</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="setting">Setting</string>
    <string name="select_color">Select Color</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_categories">Add new category</string>
    <string name="update">Update</string>


    <string name="ex_amount">100,000,000.00</string>
    <string name="ex_date">7 November 2021</string>


    <string name="name_empty_error">Name cannot be empty</string>
    <string name="wallet_name_empty_error">Wallet or Account Name cannot be empty</string>
    <string name="wallet_balance_empty_error">Wallet or Account Balance cannot be empty</string>
    <string name="category_empty_error">Category Name cannot be empty</string>

    <string name="exit_msg">Click Back button again for exit</string>
    <string name="save_msg">Save success</string>
    <string name="update_msg">Update success</string>
    <string name="delete_msg">Delete success</string>

    <string name="save_cnf">Are you sure want to save?</string>
    <string name="save_categories_cnf">Are you sure want to save? \nRemember you cannot delete category</string>


    <string name="dialog_title_update_wallet">Update wallet</string>
    <string name="dialog_detail_update_wallet">Are you sure want to update wallet?</string>
    <string name="dialog_title_delete_wallet">Delete wallet</string>
    <string name="dialog_detail_delete_wallet">Are you sure want to delete wallet? This action cannot be undone</string>

    <string name="please_select_one">Please Select One</string>

    <string name="date_format">dd/MM/yyy HH:mm:ss</string>

    <string-array name="income_expense_arr">
        <item>Income</item>
        <item>Expense</item>
    </string-array>

</resources>