<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_content">

    <TextView
        android:id="@+id/recycler_item_dashboard_income"
        style="@style/TextViewGeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_content"
        android:text="@string/incex" />

    <TextView
        android:id="@+id/recycler_item_dashboard_transaction_name"
        style="@style/TextViewGeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/recycler_item_dashboard_transaction_date"
        android:layout_toEndOf="@+id/recycler_item_dashboard_income"
        android:lines="1"
        android:text="@string/transaction_name" />

    <TextView
        android:id="@+id/recycler_item_dashboard_transaction_date"
        style="@style/TextViewGeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/ex_date"
        android:textSize="@dimen/small_X_text" />

    <TextView
        android:id="@+id/recycler_item_dashboard_acc_name"
        style="@style/TextViewGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recycler_item_dashboard_income"
        android:layout_toStartOf="@+id/recycler_item_dashboard_currency"
        android:lines="1"
        android:text="@string/account_name" />

    <TextView
        android:id="@+id/recycler_item_dashboard_currency"
        style="@style/TextViewGeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recycler_item_dashboard_income"
        android:layout_toStartOf="@+id/recycler_item_dashboard_amount"
        android:text="@string/rupiah" />

    <TextView
        android:id="@+id/recycler_item_dashboard_amount"
        style="@style/TextViewGeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recycler_item_dashboard_income"
        android:layout_alignParentEnd="true"
        android:text="@string/ex_amount" />
</RelativeLayout>