<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/bg_margin"
        android:elevation="@dimen/card_elevation"
        app:cardUseCompatPadding="true"
        card_view:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/recycler_item_transaction_image_account"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_account_balance_24"
                    android:contentDescription="@string/image" />

                <TextView
                    android:id="@+id/recycler_item_transaction_text_accountName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_content_square"
                    android:layout_toStartOf="@+id/recycler_item_transaction_spinner_expense"
                    android:layout_toEndOf="@+id/recycler_item_transaction_image_account"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/transaction_name"
                    android:textSize="@dimen/medium_text"
                    app:fontFamily="@font/poppinsregular" />

                <TextView
                    android:id="@+id/recycler_item_transaction_spinner_expense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/expense" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_content">

                <TextView
                    android:id="@+id/recycler_item_transaction_text_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/rupiah"
                    android:textAlignment="center"
                    android:textSize="@dimen/large_text"
                    app:fontFamily="@font/poppinsregular" />

                <TextView
                    android:layout_marginStart="@dimen/padding_content"
                    android:id="@+id/transaction_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/recycler_item_transaction_text_currency"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/ex_amount"
                    android:textSize="@dimen/large_text"
                    app:fontFamily="@font/poppinsregular" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/recycler_item_transaction_text_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ex_date"/>

                <ImageView
                    android:src="@drawable/ic_baseline_calendar_today_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/recycler_item_transaction_text_parent_cat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/categories"/>

                <TextView
                    android:id="@+id/recycler_item_transaction_text_child_cat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/categories"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>