<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="2">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/bg_margin"
        android:layout_weight="1"
        android:elevation="@dimen/card_elevation"
        app:cardUseCompatPadding="true"
        card_view:cardElevation="@dimen/card_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/dashboard_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/dashboard_currency" />


            <TextView
                android:id="@+id/dashboard_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/rupiah"
                android:textAlignment="center"
                android:textSize="@dimen/large_text"
                app:fontFamily="@font/poppinsregular" />

            <TextView
                android:id="@+id/dashboard_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/dashboard_currency"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/total_balance"
                android:textAlignment="center"
                android:textSize="@dimen/large_text"
                app:fontFamily="@font/poppinsregular" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/bg_margin"
        android:layout_weight="1"
        android:elevation="@dimen/card_elevation"
        app:cardUseCompatPadding="true"
        card_view:cardElevation="@dimen/card_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_content">

            <TextView
                android:id="@+id/dashboard_text_current_month"
                style="@style/TextViewGeneral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/month"
                android:textSize="@dimen/large_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dashboard_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/dashboard_text_current_month" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>