<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/bg_margin"
        android:elevation="@dimen/card_elevation"
        app:cardUseCompatPadding="true"
        card_view:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_content_half">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/recycler_item_wallet_acc_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/poppinsregular"
                    android:paddingStart="@dimen/padding_content"
                    android:paddingEnd="@dimen/padding_content"
                    android:text="@string/account_name"
                    android:textSize="@dimen/medium_text"
                    app:fontFamily="@font/poppinsregular" />

                <TextView
                    android:id="@+id/recycler_item_wallet_acc_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/recycler_item_wallet_btnDropDown"
                    android:layout_toEndOf="@+id/recycler_item_wallet_acc_name"
                    android:fontFamily="@font/poppinsregular"
                    android:paddingStart="@dimen/padding_content"
                    android:paddingEnd="@dimen/padding_content"
                    android:text="@string/total_balance"
                    android:textAlignment="center"
                    android:textSize="@dimen/medium_text"
                    app:fontFamily="@font/poppinsregular" />

                <Button
                    android:id="@+id/recycler_item_wallet_btnDropDown"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/ic_baseline_keyboard_arrow_down_24" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/recycler_item_wallet_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_toplines"
                android:orientation="vertical"
                android:visibility="visible">

                <EditText
                    android:inputType="textPersonName"
                    android:id="@+id/recycler_item_wallet_content_acc_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/padding_content"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_toStartOf="@+id/recycler_item_wallet_content_btnPallete"
                    android:background="@drawable/custom_rectangle"
                    android:hint="@string/account_name"
                    android:padding="@dimen/padding_content" />

                <Button
                    android:id="@+id/recycler_item_wallet_content_btnPallete"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/padding_content"
                    android:background="@drawable/ic_baseline_palette_24" />

                <EditText
                    android:id="@+id/recycler_item_wallet_content_acc_balance"
                    style="@style/EditTextNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recycler_item_wallet_content_acc_name"
                    android:hint="@string/account_balance" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recycler_item_wallet_content_acc_balance"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageButton
                        android:id="@+id/recycler_item_wallet_content_btnSave"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_content"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/black"
                        android:src="@drawable/ic_baseline_check_24_white"
                        android:contentDescription="@string/image"/>

                    <ImageButton
                        android:id="@+id/recycler_item_wallet_content_btnDelete"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/red_cancel"
                        android:src="@drawable/ic_baseline_remove_24"
                        android:contentDescription="@string/image" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>