<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/bg_margin"
            android:elevation="@dimen/card_elevation"
            app:cardUseCompatPadding="true"
            card_view:cardElevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_content">

                    <ImageView
                        android:id="@+id/transaction_image_account"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/image"
                        android:src="@drawable/ic_baseline_account_balance_24" />

                    <EditText
                        android:id="@+id/transaction_edittext_transactionName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/padding_content"
                        android:layout_toStartOf="@+id/transaction_spinner_expense"
                        android:layout_toEndOf="@+id/transaction_image_account"
                        android:autofillHints="text"
                        android:fontFamily="@font/poppinsregular"
                        android:hint="@string/transaction_name"
                        android:textSize="@dimen/medium_text"
                        app:fontFamily="@font/poppinsregular" />

                    <Spinner
                        android:id="@+id/transaction_spinner_expense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_content">

                    <EditText
                        android:id="@+id/transaction_edittext_balance"
                        style="@style/EditTextNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="text"
                        android:background="@drawable/custom_textlines"
                        android:hint="@string/amount"
                        android:padding="@dimen/padding_content" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/transaction_layout_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_content"
                    android:background="@drawable/custom_textlines"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_content_half">

                    <TextView
                        android:id="@+id/transaction_textView_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/padding_content_half"
                        android:text="@string/ex_date" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_calendar_today_24" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/padding_content"
                    android:weightSum="2"
                    android:animateLayoutChanges="true">

                    <Spinner
                        android:id="@+id/transaction_spinner_parent_cat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/transaction_spinner_child_cat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transaction_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/transaction_btn_add"
        style="@style/AddFloatingBtn"
        android:contentDescription="@string/image"
        app:backgroundTint="@color/black_opac75"
        app:elevation="0dp"
        app:pressedTranslationZ="0dp"
        app:srcCompat="@drawable/ic_baseline_add_24"
        app:tint="@color/background" />
</RelativeLayout>